# pycrysfml

./: .gitignore  .travis.yml  BUILDING.md  BUILDING_CRYSFML_PYTHON.md  CFML_GlobalDeps.f90  CFML_GlobalDeps_Windows_intel.f90  CFML_Maths.f90  CFML_Msfac.patch  CFML_String_Util.patch  CFML_Strings.f90  Makefile  Manual.rtf  README.md  add_cmplx.py  bfiles.txt  build.sh  build_so.sh  clean.sh  dockerfile  edits  ff  fix_deps.py  fix_makefile_deps.py  fix_type_decl.py  fortwrap.py  gen_bfiles.py  gen_fort_methods.py  gen_help_file.py  gen_list.py  hklGen.py  lattice_calculator_procedural2.py  libcrysfml_test.dylib  make_crysfml  pycrysfml.i  pyproject.toml  requirements.txt  setup.py  test_crysfml.py  test_gfort2py.py  test_log  (+1 more)
Data/: Al2O3 Background.BGR  Al2O3.cif  Al2O3.py  TiO2.py
build_tools/: add_cmplx.py  f90_deps.py  fix_deps.py  fix_makefile_deps.py  fix_type_decl.py  fortwrap.py  gen_bfiles.py  gen_cpp_methods.py  gen_fort_methods.py  gen_help_file.py  gen_list.py
cpp_modules/: string_wrap.cpp  string_wrap.h
doc/: CFL_Info.txt  File_descriptions.md  Ubuntu_deps.txt  edits
examples/: README.md  al2o3_example.py  crysfml_api.py  crystal_calculations.py  element_properties.py  magnetic_structure.py  single_crystal.py
fix_circular/: atom_list_type.cpp  atom_list_type.h  atoms_cell_type.cpp  atoms_cell_type.h  crystal_cell_type.cpp  crystal_cell_type.h  magh_list_type.cpp  magh_list_type.h  matom_list_type.cpp  matom_list_type.h  molecular_crystal_type.cpp  molecular_crystal_type.h  molecule_type.cpp  molecule_type.h  reflection_list_type.cpp  reflection_list_type.h  space_group_type.cpp  space_group_type.h
fort_methods/: cat.sh  clean.sh  fix_line_width.py  inject_methods.py
fort_methods/cfml_atom_mod/: Atom_Equiv_List_Type.f90  Atom_Equiv_Type.f90  Atom_List_Type.f90  Atom_Type.f90  Atoms_Cell_Type.f90  mAtom_List_Type.f90  mAtom_Type.f90
fort_methods/cfml_cryst_types/: Crystal_Cell_Type.f90  Twofold_Axes_Type.f90  Zone_Axis_Type.f90
fort_methods/cfml_diffraction_patterns/: Diffraction_Pattern_Type.f90
fort_methods/cfml_form_cif/: File_List_Type.f90  Job_Info_type.f90  interval_type.f90
fort_methods/cfml_magsymm/: MSym_Oper_Type.f90  (+4 more)
ftest/: Makefile  cdriver.c  example.c  example.py  fexample.f90
hklgen/: Al2O3.py  fswig_hklgen.py  hkl.wpr  hkl.wpu  hkl_model.py  powder_test.sfa  pycrysfml.py  run.py  successful_output  sxtal_model.py
playbook/: .pycrysfml.yml.swp  pycrysfml.yml  run.sh  test.yml
(+264 files in other folders)
