[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pycrysfml08"
version = "0.1.0"
description = "Python bindings for CrysFML2008 crystallographic library"
readme = "README.md"
license = {text = "LGPL-3.0-or-later"}
authors = [
    {name = "William Ratcliff", email = "william.ratcliff@nist.gov"},
]
maintainers = [
    {name = "William Ratcliff", email = "william.ratcliff@nist.gov"},
]
keywords = [
    "crystallography",
    "diffraction",
    "neutron scattering",
    "x-ray diffraction",
    "space groups",
    "magnetic structures",
    "CrysFML",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Fortran",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
]
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.20.0",
    "gfort2py>=2.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
]
docs = [
    "sphinx>=6.0.0",
    "sphinx-rtd-theme>=1.2.0",
    "myst-parser>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/scattering/pycrysfml08"
Documentation = "https://github.com/scattering/pycrysfml08#readme"
Repository = "https://github.com/scattering/pycrysfml08.git"
Issues = "https://github.com/scattering/pycrysfml08/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
pycrysfml08 = ["*.mod", "*.dylib", "*.so"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
